test_case/rust-lang_rust/56375_450454002.rs
rust
use std as attr;

#[attr] //~ ERROR cannot determine resolution for the attribute macro `attr`
fn main() {}
